# bonsai

./: .gdbinit  .gitattributes  .gitignore  .gitmodules  .root_marker  CHANGELOG.txt  CMakeLists.txt  LICENSE  Session.vim  TODO  amd_compile_shaders.sh  bonsai.rdbg  breakpoints  bugs  bugs.md  c_parser_test_suite.rdbg  ctags.sh  cygmake.sh  default.nix  dottedboxguy.make.sh  jesse.bonsai.rdbg  jesse.make.sh  jesse.tests.rdbg  log.txt  make.sh  make_transcendental_tables.py  one_thousand_museum.glb  readme.md  remedy_repro.make.sh  remedy_repro.rdbg  settings.init  sloc.sh  test.cmd  test.sh  todos.md
.github/workflows/: build.yml
assets/: png_convert.sh.sh
assets/mystic_rpg_icon_pack/: readme.txt
brushes/: black_castle_wall.brush  black_castle_wall_broken.brush  black_castle_wall_rough.brush  castle wall.brush  castle_wall_fine.brush  cobblestone.brush  crater-inner.1.brush  crater-outer.1.brush  dirt.brush  dirt_path.brush  eraser.brush  foliage.base.brush  foliage.brush  foliage.perlin.brush  foliage.perlin.lattice.2.brush  foliage.perlin.lattice.brush  foliage_2.brush  foo.brush  granite_wall.1.brush  granite_wall.2.brush  granite_wall.brush  granite_wall_paint.brush  grass.brush  imperial_flag.brush  leaves.brush  leaves2.brush  orb.brush  ork_castle_teeth.brush  perlin.brush  portal.1.brush  portal.2.brush  portal.brush  portal.inner.brush  pyramid.brush  small_broken_stone_wall.brush  small_gravel.1.brush  small_gravel.brush  small_gravel_2.brush  soft_eraser.brush  spackled_base.1.brush  (+23 more)
callgrind/: process_callgrind.sh  run_callgrind.sh
docs/: 00_getting_started.md  01_build_process.md  02_create_new_project.md  controls.md  editor.md  world_gen.md
examples/animation_test/: game.cpp  game_constants.h  game_types.h
examples/asset_picker/: game.cpp  game_constants.h  game_types.h
examples/blank_project/: game.cpp  game_constants.h  (+1 more)
hooks/: applypatch-msg.sample  commit-msg.sample  fsmonitor-watchman.sample  post-update.sample  pre-applypatch.sample  pre-clone.sample  pre-commit.sample  pre-merge-commit.sample  pre-push.sample  pre-rebase.sample  pre-receive.sample  prepare-commit-msg.sample  push-to-checkout.sample  sendemail-validate.sample  update.sample
models/: 3x3x3.vox  AncientTemple.vox  a_box_on_ground.chunk  a_long_ground.chunk  animated_cube.dae  archway.vox  archway_with_floor.vox  block.vox  block_farm_degrading.vox  block_farm_squares.vox  chr_gumi.vox  chr_jp.vox  chr_man.vox  chr_mom.vox  chr_old.vox  chr_rain.vox  chr_sol.vox  chr_sword.vox  chr_tsurugi.vox  cube.dae  grass_block.vox  grass_block_16.vox  grassy_block.vox  gravel_blocks.vox  happy_square.vox  model.dae  one_thousand_museum.dae  plane.dae  red_power_barrell.vox  skele_base.vox  skele_bitty_0.vox  skele_bitty_1.vox  skele_bitty_2.vox  skull.vox  skull_broken.vox  splotion_bitty_0.vox  splotion_bitty_1.vox  square.vox  square_expanded.vox  test2.vox  (+4 more)
scripts/: amd_compile_shaders.sh  check_if_terminal_interactive.sh  colors.sh  convert_png_icons.sh  convert_svg_icons.sh  emcc.sh  gdb_pretty_printers.py  make.sh  preamble.sh  preprocess.sh  preprocessor_current.sh  preprocessor_dev.sh  run_tests.sh  set_platform.sh  setup_for_cxx.sh  sloc.sh  todo.sh
shaders/: 3DTransparency.fragmentshader  3DTransparency.vertexshader  Ao.fragmentshader  Bloom.fragmentshader  DepthRTT.fragmentshader  DepthRTT.vertexshader  FullPassthrough.vertexshader  Gaussian.fragmentshader  Lighting.fragmentshader  Lighting.vertexshader  Passthrough.vertexshader  RenderToTexture.fragmentshader  RenderToTexture.vertexshader  SimpleColor.fragmentshader  SimpleColor.vertexshader  SimpleFragmentShader.fragmentshader  SimpleTexture.fragmentshader  SimpleVertexShader.vertexshader  TextVertexShader.fragmentshader  TextVertexShader.vertexshader  bloom_downsample.fragmentshader  bloom_upsample.fragmentshader  composite.fragmentshader  composite.vertexshader  cosine_interp_vis.fragmentshader  curve_remap_visualizer.fragmentshader  gBuffer.fragmentshader  gBuffer.vertexshader  header.glsl
src/: BonsaiConfig.h.in  animation.h  bitmap.cpp  bonsai.cpp  bonsai.h  bonsai.natvis  bonsai_asset_loaders.cpp  bonsai_engine.cpp  bonsai_engine.h  bonsai_file.cpp  bonsai_gl.h  bonsai_hashtable.h  bonsai_math.h  bonsai_mesh.cpp  bonsai_string.cpp  bonsai_string.h  bonsai_types.h  bonsai_vertex.h  camera.cpp  camera_types.h  canonical_position.cpp  chunk.cpp  colors.h  constants.h  constants.hpp  controls.cpp  controls.hpp  counted_string.cpp  debug.cpp  debug.h  debug_data_system.cpp  debug_draw.cpp  debug_print.h  debug_print_ast_node.h  debug_render_system.cpp  entity.cpp  game.cpp  game.h  game_loader.cpp  globals.h  (+51 more)
tests/: allocation.cpp  bitmap.cpp  bonsai_string.cpp  callgraph.cpp  chunk.cpp  colladaloader.cpp  file.cpp  heap_allocation.cpp  m4.cpp  objloader.cpp  preprocessor.cpp  rng.cpp  string.cpp  test_bitmap.cpp  test_utils.cpp  ui_command_buffer.cpp
(+752 files in other folders)
